# ai-e-comm

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  vercel.json
assets/prompts/: conversation_builder_prompt.text  explainer_prompt.text  mapping_builder_prompt.text
data/raw/: Apparels_shared.csv  Apparels_shared_embeddings.pkl
src/: streamlit_app.py
src/agents/: explainer_agent.py  mapping_agent.py  query_agent.py  recommendation_agent.py  vector_recommendation_agent.py
src/utils/: __init__.py  openai_client.py
