[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-e-comm"
version = "0.1.0"
description = "A conversational AI shopping assistant with Streamlit and CLI interfaces."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit",
    "openai",
    "python-dotenv", 
    "pandas", 
    "httpx==0.24.1"
]

[project.urls]
"Homepage" = "https://github.com/your-username/ai-e-comm"
"Bug Tracker" = "https://github.com/your-username/ai-e-comm/issues" 